--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.16",
+    "vue": "^3.2.20",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
+    "node-sass": "^6.0.1",
+    "sass": "^1.43.3",
+    "sass-loader": "^12.2.0",
     "vite": "^2.6.4"
   }
 }
