--- a/server/config.env
+++ b/server/config.env
@@ -1,4 +1,17 @@
-AUTHOR=Hamza-Sehouli
+PROJECT_AUTHOR=Hamza Sehouli
 DB=mongodb+srv://hamzaseho:<password>@cluster0.oajhk.mongodb.net/inschat?retryWrites=true&w=majority
 DB_PASSWORD=12341234
 NODE_ENV=development
+
+
+
+
+
+EEXPIRES=1h
+COMPANY=inschat
+
+PORT=3000
+
+JWT_SECRET_KEY=my-awesome-secret-and-beautiful-strog-moroccan-key
+JWT_EXPIRES=1h
+SENDGRID_API_KEY=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
