--- a/server/package.json
+++ b/server/package.json
@@ -11,15 +11,28 @@
   "author": "Hamza Sehouli",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.7",
+    "axios": "^0.23.0",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.5.0",
     "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.0",
+    "nodemailer-sendgrid": "^1.0.3",
+    "slugify": "^1.6.1",
     "xss-clean": "^0.1.1"
+  },
+  "engines": {
+    "node": ">=10.0.0"
+  },
+  "devDependencies": {
+    "eslint-plugin-security": "^1.4.0"
   }
 }
