Finish signup form

--- a/server/config.env
+++ b/server/config.env
@@ -1,5 +1,5 @@
 PROJECT_AUTHOR=Hamza Sehouli
-DB=mongodb+srv://hamzaseho:<password>@cluster0.oajhk.mongodb.net/inschat?retryWrites=true&w=majority
+DB=mongodb+srv://hamzaseho:<password>@cluster0.oajhk.mongodb.net/instchat?retryWrites=true&w=majority
 DB_PASSWORD=12341234
 NODE_ENV=development
 
