--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "socket.io-client": "^4.3.2",
     "vue": "^3.2.20",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
